fix styles in portfolio child - dark mode

--- a/Components/MainPage/Opinions/Opinions.module.css
+++ b/Components/MainPage/Opinions/Opinions.module.css
@@ -1,5 +1,6 @@
 .slider {
     width: 100vw;
+    background-color: #fff;
   }
   .opinions__slider__content {
     margin: 0 auto;
