--- a/Components/MainPage/Questions/Questions.module.css
+++ b/Components/MainPage/Questions/Questions.module.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&display=swap');
 .questions__wrapper{
     width: 100%;
-    background-color: #fff;
     color: #000;
     margin: 60px 0 40px 0 ;
+    background-color: #fff;
 }
 .questions__width{
     display: flex;
@@ -12,12 +12,15 @@
     align-items: center;
     padding: 0 15px 50px 15px;
     width: 100%;
+
 }
 .questions__header__mobile{
     font-family: 'Cinzel', serif;
     font-weight: 500;
     margin: 20px 0 ;
     font-size: 22px;
+    color: #000;
+
 }
 .questions__header__desktop{
     display: none;
