--- a/Components/PortfolioChild/PortfolioChild.module.css
+++ b/Components/PortfolioChild/PortfolioChild.module.css
@@ -1,4 +1,6 @@
-
+.child{
+    background-color: #fff;
+}
 .child__image{
     position:absolute;
 }
@@ -24,7 +26,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0,0,0,0.3);
     z-index: 3;
 }
@@ -57,5 +59,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 0 auto;
+    margin: 30px auto;
+    background-color: #fff;
+
 }
